homotopy-core/tests/snapshots/layout__scalar_and_beads.snap
---
source: homotopy-core/tests/layout.rs
expression: layout.positions
---
{
    [
        Interior(
            Regular(
                0,
            ),
        ),
        Interior(
            Regular(
                0,
            ),
        ),
    ]: [
        1.0,
        1.0,
    ],
    [
        Interior(
            Singular(
                2,
            ),
        ),
        Boundary(
            Target,
        ),
    ]: [
        6.0,
        8.0,
    ],
    [
        Interior(
            Regular(
                3,
            ),
        ),
        Interior(
            Singular(
                1,
            ),
        ),
    ]: [
        7.0,
        6.0,
    ],
    [
        Boundary(
            Source,
        ),
        Boundary(
            Source,
        ),
    ]: [
        0.0,
        0.0,
    ],
    [
        Interior(
            Regular(
                1,
            ),
        ),
        Interior(
            Regular(
                2,
            ),
        ),
    ]: [
        3.0,
        7.0,
    ],
    [
        Boundary(
            Target,
        ),
        Interior(
            Singular(
                0,
            ),
        ),
    ]: [
        8.0,
        2.0,
    ],
    [
        Interior(
            Regular(
                1,
            ),
        ),
        Interior(
            Singular(
                0,
            ),
        ),
    ]: [
        3.0,
        2.0,
    ],
    [
        Interior(
            Regular(
                2,
            ),
        ),
        Boundary(
            Target,
        ),
    ]: [
        5.0,
        8.0,
    ],
    [
        Interior(
            Regular(
                0,
            ),
        ),
        Interior(
            Singular(
                0,
            ),
        ),
    ]: [
        1.0,
        2.0,
    ],
    [
        Interior(
            Singular(
                1,
            ),
        ),
        Interior(
            Regular(
                2,
            ),
        ),
    ]: [
        4.0,
        5.0,
    ],
    [
        Boundary(
            Source,
        ),
        Interior(
            Singular(
                1,
            ),
        ),
    ]: [
        0.0,
        6.0,
    ],
    [
        Interior(
            Singular(
                2,
            ),
        ),
        Interior(
            Singular(
                1,
            ),
        ),
    ]: [
        6.0,
        6.0,
    ],
    [
        Interior(
            Regular(
                3,
            ),
        ),
        Boundary(
            Source,
        ),
    ]: [
        7.0,
        0.0,
    ],
    [
        Boundary(
            Source,
        ),
        Boundary(
            Target,
        ),
    ]: [
        0.0,
        8.0,
    ],
    [
        Interior(
            Regular(
                2,
            ),
        ),
        Interior(
            Regular(
                0,
            ),
        ),
    ]: [
        5.0,
        1.0,
    ],
    [
        Boundary(
            Target,
        ),
        Interior(
            Singular(
                1,
            ),
        ),
    ]: [
        8.0,
        6.0,
    ],
    [
        Interior(
            Regular(
                3,
            ),
        ),
        Interior(
            Regular(
                0,
            ),
        ),
    ]: [
        7.0,
        1.0,
    ],
    [
        Interior(
            Regular(
                1,
            ),
        ),
        Interior(
            Singular(
                1,
            ),
        ),
    ]: [
        3.0,
        6.0,
    ],
    [
        Boundary(
            Source,
        ),
        Interior(
            Regular(
                1,
            ),
        ),
    ]: [
        0.0,
        4.0,
    ],
    [
        Boundary(
            Target,
        ),
        Boundary(
            Target,
        ),
    ]: [
        8.0,
        8.0,
    ],
    [
        Interior(
            Singular(
                2,
            ),
        ),
        Interior(
            Regular(
                1,
            ),
        ),
    ]: [
        6.0,
        4.0,
    ],
    [
        Interior(
            Singular(
                1,
            ),
        ),
        Interior(
            Regular(
                3,
            ),
        ),
    ]: [
        4.0,
        7.0,
    ],
    [
        Boundary(
            Source,
        ),
        Interior(
            Singular(
                0,
            ),
        ),
    ]: [
        0.0,
        2.0,
    ],
    [
        Interior(
            Singular(
                2,
            ),
        ),
        Interior(
            Singular(
                0,
            ),
        ),
    ]: [
        6.0,
        2.0,
    ],
    [
        Interior(
            Singular(
                1,
            ),
        ),
        Interior(
            Singular(
                0,
            ),
        ),
    ]: [
        4.0,
        2.0,
    ],
    [
        Interior(
            Regular(
                0,
            ),
        ),
        Boundary(
            Target,
        ),
    ]: [
        1.0,
        8.0,
    ],
    [
        Interior(
            Regular(
                3,
            ),
        ),
        Boundary(
            Target,
        ),
    ]: [
        7.0,
        8.0,
    ],
    [
        Interior(
            Regular(
                2,
            ),
        ),
        Interior(
            Regular(
                1,
            ),
        ),
    ]: [
        5.0,
        4.0,
    ],
    [
        Boundary(
            Target,
        ),
        Boundary(
            Source,
        ),
    ]: [
        8.0,
        0.0,
    ],
    [
        Interior(
            Regular(
                3,
            ),
        ),
        Interior(
            Regular(
                1,
            ),
        ),
    ]: [
        7.0,
        4.0,
    ],
    [
        Interior(
            Singular(
                0,
            ),
        ),
        Boundary(
            Source,
        ),
    ]: [
        2.0,
        0.0,
    ],
    [
        Boundary(
            Source,
        ),
        Interior(
            Regular(
                0,
            ),
        ),
    ]: [
        0.0,
        1.0,
    ],
    [
        Boundary(
            Target,
        ),
        Interior(
            Regular(
                0,
            ),
        ),
    ]: [
        8.0,
        1.0,
    ],
    [
        Interior(
            Singular(
                2,
            ),
        ),
        Interior(
            Regular(
                0,
            ),
        ),
    ]: [
        6.0,
        1.0,
    ],
    [
        Interior(
            Singular(
                1,
            ),
        ),
        Interior(
            Regular(
                0,
            ),
        ),
    ]: [
        4.0,
        1.0,
    ],
    [
        Interior(
            Singular(
                0,
            ),
        ),
        Interior(
            Regular(
                2,
            ),
        ),
    ]: [
        2.0,
        7.0,
    ],
    [
        Interior(
            Singular(
                1,
            ),
        ),
        Interior(
            Singular(
                1,
            ),
        ),
    ]: [
        4.0,
        4.0,
    ],
    [
        Interior(
            Regular(
                0,
            ),
        ),
        Boundary(
            Source,
        ),
    ]: [
        1.0,
        0.0,
    ],
    [
        Interior(
            Regular(
                1,
            ),
        ),
        Boundary(
            Target,
        ),
    ]: [
        3.0,
        8.0,
    ],
    [
        Interior(
            Regular(
                2,
            ),
        ),
        Interior(
            Regular(
                2,
            ),
        ),
    ]: [
        5.0,
        7.0,
    ],
    [
        Interior(
            Singular(
                0,
            ),
        ),
        Boundary(
            Target,
        ),
    ]: [
        2.0,
        8.0,
    ],
    [
        Interior(
            Regular(
                2,
            ),
        ),
        Interior(
            Singular(
                0,
            ),
        ),
    ]: [
        5.0,
        2.0,
    ],
    [
        Boundary(
            Target,
        ),
        Interior(
            Regular(
                1,
            ),
        ),
    ]: [
        8.0,
        4.0,
    ],
    [
        Interior(
            Singular(
                1,
            ),
        ),
        Interior(
            Regular(
                1,
            ),
        ),
    ]: [
        4.0,
        3.0,
    ],
    [
        Interior(
            Regular(
                0,
            ),
        ),
        Interior(
            Regular(
                2,
            ),
        ),
    ]: [
        1.0,
        7.0,
    ],
    [
        Interior(
            Singular(
                1,
            ),
        ),
        Interior(
            Singular(
                2,
            ),
        ),
    ]: [
        4.0,
        6.0,
    ],
    [
        Interior(
            Singular(
                0,
            ),
        ),
        Interior(
            Singular(
                0,
            ),
        ),
    ]: [
        2.0,
        2.0,
    ],
    [
        Interior(
            Regular(
                1,
            ),
        ),
        Boundary(
            Source,
        ),
    ]: [
        3.0,
        0.0,
    ],
    [
        Interior(
            Singular(
                1,
            ),
        ),
        Boundary(
            Source,
        ),
    ]: [
        4.0,
        0.0,
    ],
    [
        Interior(
            Regular(
                1,
            ),
        ),
        Interior(
            Regular(
                0,
            ),
        ),
    ]: [
        3.0,
        1.0,
    ],
    [
        Boundary(
            Target,
        ),
        Interior(
            Regular(
                2,
            ),
        ),
    ]: [
        8.0,
        7.0,
    ],
    [
        Boundary(
            Source,
        ),
        Interior(
            Regular(
                2,
            ),
        ),
    ]: [
        0.0,
        7.0,
    ],
    [
        Interior(
            Regular(
                2,
            ),
        ),
        Interior(
            Singular(
                1,
            ),
        ),
    ]: [
        5.0,
        6.0,
    ],
    [
        Interior(
            Singular(
                2,
            ),
        ),
        Interior(
            Regular(
                2,
            ),
        ),
    ]: [
        6.0,
        7.0,
    ],
    [
        Interior(
            Singular(
                0,
            ),
        ),
        Interior(
            Regular(
                0,
            ),
        ),
    ]: [
        2.0,
        1.0,
    ],
    [
        Interior(
            Regular(
                0,
            ),
        ),
        Interior(
            Regular(
                1,
            ),
        ),
    ]: [
        1.0,
        4.0,
    ],
    [
        Interior(
            Singular(
                0,
            ),
        ),
        Interior(
            Singular(
                1,
            ),
        ),
    ]: [
        2.0,
        6.0,
    ],
    [
        Interior(
            Singular(
                1,
            ),
        ),
        Boundary(
            Target,
        ),
    ]: [
        4.0,
        8.0,
    ],
    [
        Interior(
            Singular(
                2,
            ),
        ),
        Boundary(
            Source,
        ),
    ]: [
        6.0,
        0.0,
    ],
    [
        Interior(
            Regular(
                3,
            ),
        ),
        Interior(
            Singular(
                0,
            ),
        ),
    ]: [
        7.0,
        2.0,
    ],
    [
        Interior(
            Regular(
                1,
            ),
        ),
        Interior(
            Regular(
                1,
            ),
        ),
    ]: [
        3.0,
        4.0,
    ],
    [
        Interior(
            Regular(
                3,
            ),
        ),
        Interior(
            Regular(
                2,
            ),
        ),
    ]: [
        7.0,
        7.0,
    ],
    [
        Interior(
            Regular(
                2,
            ),
        ),
        Boundary(
            Source,
        ),
    ]: [
        5.0,
        0.0,
    ],
    [
        Interior(
            Regular(
                0,
            ),
        ),
        Interior(
            Singular(
                1,
            ),
        ),
    ]: [
        1.0,
        6.0,
    ],
    [
        Interior(
            Singular(
                0,
            ),
        ),
        Interior(
            Regular(
                1,
            ),
        ),
    ]: [
        2.0,
        4.0,
    ],
}
